# Qube

./: .env  .env.example  .gitignore  LICENSE  README.md  components.json  generate_ppt.js  next.config.ts  package-lock.json  package.json  playground  test_presentation.js
.github/workflows/: build.yml
app/: globals.css  layout.tsx  page.tsx  provider.tsx
components/assistant-ui/: agent-runtime-provider.tsx  ask-user-prompt.tsx  attachment.tsx  markdown-text.tsx  model-selector.tsx  permission-prompt.tsx  reasoning.tsx  shiki-highlighter.tsx  tabs.tsx  thinking-toggle.tsx  tool-fallback.tsx  tool-group.tsx  tooltip-icon-button.tsx
components/examples/: base.tsx
components/runtime/: demo-runtime-provider.tsx
components/shared/: connector-connect-dialog.tsx  connectors-tab.tsx  scheduling-tab.tsx  settings-dialog.tsx
components/tauri/: titlebar.tsx
components/ui/: dialog.tsx
constants/: model.ts
lib/: data-dir.ts  settings-store.ts
lib/agent/: agent.ts  cerebras.ts  memory-agent.ts  model-client.ts  provider-store.ts  system-prompt.ts  thinking-support.ts  vision-support.ts  zen.ts
lib/connectors/: composio.ts  connectors.ts  google.ts  icons.tsx
lib/document-templates/: index.ts
sandbox/: README.md
scripts/: build-sidecar.js  reproduce-settings-dialog-close.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs  tray.rs
static/: index.html
temp/: generate_ppt.js  generate_ppt.mjs
types/: screenshot-desktop.d.ts
(+98 files in other folders)
